# programming-miniproject

./: CMakeLists.txt  README.md  github_link.txt
Client/: Client.sln
Client/Client/: Client.vcxproj
SFML SERVER - Copy/: Server.sln
SFML SERVER - Copy/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Maincpp.cpp
SFML SERVER/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
santa_game/: Server.cpp  santa_game.sln
santa_game/enc_temp_folder/7e1fec6d9d2e372fe4a9976e991e7f66/: santa_game.cpp
santa_game/enc_temp_folder/bf1636eb7c42640185de6ef066bd/: santa_game.cpp
santa_game/santa_game/: Client.cpp  ConsoleApplication3.cpp  Drops.h  Elf.cpp  Elf.h  Field.cpp  Field.h  Player.cpp  Player.h  Props.cpp  Props.h  Santa.cpp  Santa.h  Server.cpp  ServerG.cpp  santa_game - Genvej.lnk  santa_game.cbp  santa_game.cpp  santa_game.layout  santa_game.vcxproj  santa_game.vcxproj.filters  stdafx.cpp
